RTS-14688 Fixed: Kicker out of place

--- a/themes/uib_w3/css/style.css
+++ b/themes/uib_w3/css/style.css
@@ -2992,7 +2992,8 @@ div.field-item {
   .field-name-field-uib-relation .field-name-field-uib-kicker {
     text-align: left;
     position: absolute;
-    top: -1.625rem; }
+    top: -1.625rem;
+    left: 0rem; }
   .field-name-field-uib-relation .node-uib-article,
   .field-name-field-uib-relation .node-uib-testimonial,
   .field-name-field-uib-relation .node-uib-external-content,
